--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 <body>
     <h1>Bienvenido a mi página</h1>
     <p>Se hacen estos cambios para ver como se ven reflejados en Github</p>
+    <section>
+        <p>Un parrafo adicional</p>
+    </section>
+    <section>
+        <p>Otro parrafo adicional</p>
+    </section>
 </body>
 </html>
